--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
 
         const url = 'http://localhost/blooger/api/posts/2529/html';
         
-        fetch(url).then(function(response){
+        fetch(url, {
+                  method: 'POST',
+                  headers: {
+                      'Content-Type': 'application/json',
+                      
+                  },
+                  body: JSON.stringify({ title: 'New Post', content: 'Post content here' })
+                }).then(function(response){
             return response.text();
             //output.innerHTML = response.json();
 
