--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             return;
           // display_data(data);
             // Replace the entire page content, including <head> and <body>
-            document.documentElement.innerHTML = data;
+            //document.documentElement.innerHTML = data;
             // Execute any <script> tags in the returned HTML
             const scripts = document.documentElement.querySelectorAll("script");
             scripts.forEach((script) => {
