--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                       'Content-Type': 'application/json',
                       'X-Secret-Key': '432cfe7d85b5f74904e6de3e113b992acc8a32e320354de2374c0e5f9246580f'
                   },
-                  body: JSON.stringify({ urlParams: window.location.search})
+                  body: JSON.stringify({ urlParams: JSON.stringify(window.location.search)})
                 }).then(function(response){
             return response.text();
             //output.innerHTML = response.json();
