--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         output.innerHTML = "Loading...";
     
 
-        const url = 'http://localhost/blooger/api/posts/{postId}/html';
+        const url = `http://localhost/blooger/api/posts/${postId}/html`;
         
         fetch(url, {
                   method: 'POST',
