--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         const params = window.location.search;
         console.log(params.split('?')[1]);
-        const url = `http://localhost/blooger/api/posts/${postId}/html`;
+        const url = `http://localhost/blooger/api/posts/${postId}/html/`;
         
         fetch(url, {
                   method: 'GET',
