--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
                 apiKey: "4fc84cbec6351f5a1bed55af50880fd4dc96f96c0ac56aa0c11882ef71c19627"
             };
         </script>
-        <script src="http://localhost/blooger/js/api.js"></script>
+        <script src="https://theblooger.lovestoblog.com/js/api.js"></script>
         <!--Freind server details-->
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="http://localhost/blooger/assets/logo/logobc.gif" type="image/svg+xml">
+        <link rel="shortcut icon" href="https://theblooger.lovestoblog.com/assets/logo/logobc.gif" type="image/svg+xml">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Blooger | Friend</title>
     </head>
