--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!--Root server initialization-https://theblooger.lovestoblog.com/js/api.js->
+        <!--Root server initialization-https://theblooger.lovestoblog.com/js/api.js-->
         <script>
             window.apiConfig = {
                 apiKey: "432cfe7d85b5f74904e6de3e113b992acc8a32e320354de2374c0e5f9246580f"
