--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 
                 const params = window.location.search;
                 console.log(params.split('?')[1]);
-                const url = `https://theblooger.lovestoblog.com/api/index.php?table=posts&id=${postId}&type=html`;
+                const url = `https://theblooger.lovestoblog.com/api/posts/${postId}/html`;
                 try {
                 let response = await fetch(url);
                     console.log('CORS Test:', response.ok);
