--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 }
                 fetch(url, {
                             method: 'GET',
+                            credentials: 'include',
                             headers: {
                                 'Content-Type': 'application/json',
                             'Authorization': JSON.stringify({
