--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
                 
                 const params = window.location.search;
                 console.log(params.split('?')[1]);
-                const url = `https://theblooger.lovestoblog.com/api/posts/${postId}/html`;
-
-                fetch(url, {
+                //const url = `https://theblooger.lovestoblog.com/api/posts/${postId}/html`;
+                 const targetUrl = 'https://theblooger.lovestoblog.com/api/posts/${postId}/html';
+                 const proxyUrl = 'https://theblooger.lovestoblog.com/assets/proxy.php?url=' + encodeURIComponent(targetUrl);
+                fetch(proxyUrl, {
                             method: 'GET',
-                          
+                          headers: {
+                                'Content-Type': 'application/json',
+                                'Authorization': JSON.stringify({
+                                    'serverKey': API_KEY, // Assuming API_KEY is defined earlier
+                                })
+                            },
                             //body : JSON.stringify({'urlParams' : params})
                 }).then(function(response){
                     console.log('Status:', response.status);
