--- a/index.html
+++ b/index.html
@@ -56,14 +56,7 @@
             const url = `https://theblooger.lovestoblog.com/api/posts/${postId}/html`;
             
             fetch(url, {
-                        method: 'GET',
-                        headers: {
-                            'Content-Type': 'application/json',
-                        'Authorization': JSON.stringify({
-                            'serverKey': API_KEY,
-                            'urlParams' : params.split('?')[1],
-                        })
-                        },
+                        method: 'GET'
                         //body : JSON.stringify({'urlParams' : params})
             }).then(function(response){
                 //alert(urlParams);
